tests/bad/NoMatching.ml
let f = 3

let g x =
  match x with
  | 0 -> 0
  | 1 -> 1
;;

g f
